...
				navigation.setOptions({
					headerRight: () => (
						<View className="mr-6">
							{Platform.OS === 'ios' ? (
								<ActionSheetIos
									title="Event Settings"
									options={['Edit Event', 'Delete']}
									onOptionPress={async (index: number) => {
										if (index === 0) {
											router.push({
												pathname: 'edit-event',
												params: { event: event.id },
											})
...
