...
						</View>
					)}
					name="capacity"
				/>

				<Button
					text={!loading ? 'EDIT' : 'LOADING...'}
					className={cn('bg-brand-green', loading && 'opacity-50')}
					onPress={handleSubmit(onSubmit)}
					disabled={loading}
				/>
				<Button
					text={'CANCEL'}
...
